# history-sonachatbot

./: .gitignore  README.md  README_CHATBOT.md  TODO.md  pyproject.toml
src/sonachatbot/: api.py  main.py
src/sonachatbot/crews/poem_crew/: poem_crew.py
src/sonachatbot/crews/poem_crew/config/: agents.yaml  tasks.yaml
src/sonachatbot/tools/: college_search_tool.py
src/vectorstore/: ingest.py  searcher.py
