[project]
name = "sonachatbot"
version = "0.1.0"
description = "sonaChatBot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.8.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "pymongo>=4.16.0",
    "qdrant-client>=1.17.0",
    "litellm>=1.75.3",
]

[project.scripts]
kickoff = "sonachatbot.main:kickoff"
run_crew = "sonachatbot.main:kickoff"
plot = "sonachatbot.main:plot"
run_with_trigger = "sonachatbot.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
